# taiwain-stock-data-customized-transformation

./: .env-sample  docker-compose-test.yml  docker-compose.yaml  docker-compose.yml  init-dev.sh
data-transformation/: Dockerfile  main.py  pyproject.toml
data-transformation/data_transformation/: app.py  crud.py  database.py  main.py  models.py  settings.py  stock_data_201503_20150303.csv  utils.py
data-transformation/tests/: test_data_transformation.py  test_db_connection.py  test_test_database.py  test_test_database_connection.py
dev/: .env-sample  post-merge  post-push  pre-push
test-db/: 1_schema.sql  2_insert_data.sql
