[tool.poetry]
name = "data-transformation"
version = "0.1.0"
description = ""
authors = ["Zhima-Mochi <yehgoter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "1.4.31"
databases = {extras = ["mysql"], version = "^0.5.5"}
pandas = "^1.4.0"
pydantic = "^1.9.0"
pytest = "~=6.2"
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
